@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction
class Employee{
    -name : String
    -birthdate : Date
    -email : String
    -phoneNumber : int
    -admission date : Date
    -taxpayerNumber : String
    -address : String
    -docNumber : String
    -jobTitle : String

    +registerSkill(skillName, skillDescription): Optional<Skill>
    +validateSkill(skill): boolean
    +add(skill): boolean
}

class ToDoEntry{
-greenSpace: GreenSpace
-task: Task
-urgency: String
-startDate: Date
-endDate : Date
}

class Tasks{

}

class GreenSpaces {
        -List<GreenSpace>
        +getGreenSpaces()
}

class ToDoListRepository{
-toDoList: List<ToDoEntry>
+getToDoList(): List<ToDoEntry>
}

class AddEntryToDoListController{

}

class AddEntryToDoListUI{

}

class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getEmployeeRepository(); employeeRepository

}
class EmployeeRepository{


+getEmployee(): Employee

}
class TasksRepository{
 +getTasks(): List<Task>
 +getTodoTasks(): List<Task>
 +getAgendaTasks(): List<Task>
}
class GreenSpacesRepository{
+getGreenSpaces(): GreenSpace
}

AddEntryToDoListUI .>AddEntryToDoListController

AddEntryToDoListController .> "1" Repositories

Repositories "1" --> "1" Repositories : getInstance()
Repositories "1" --> "1" EmployeeRepository
Repositories "1" --> "1" TasksRepository
Repositories "1" --> "1" GreenSpacesRepository

AddEntryToDoListController ..>Employee

EmployeeRepository "1" --> "*" Employee

Employee "1" -U-> "*" TasksRepository : getTasks()
Employee "1" -U-> "*" GreenSpacesRepository : getGreenSpaces()
Employee --> ToDoEntry: createToDoEntry()

TasksRepository -> Tasks

GreenSpacesRepository -> GreenSpaces


Tasks "*" -D> "1" Employee

GreenSpaces "*" -> "1" Employee


ToDoEntry --> ToDoListRepository: add()



@enduml